--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header>
-        <h1>Bolsomaniac</h1>
+        <h1>Bolsomaniac - La mejor tienda de bolsos</h1>
         <p>Tienda de Bolsos</p>
     </header>
 
