añado h2 en index

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header>
         <h1>Bolsomaniac - La mejor tienda de bolsos</h1>
-        <p>Tienda de Bolsos</p>
+        <h2>Tu Tienda de Bolsos</h2>
     </header>
 
     <nav>
