--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <header>
         <h1>Bolsomaniac - La mejor tienda de bolsos</h1>
         <p>Tienda de Bolsos</p>
+        <p>Prueba para subir al remoto</p>
     </header>
 
     <nav>
