Update index.html - en remoto

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h1>Bolsomaniac - La mejor tienda de bolsos</h1>
         <p>Tienda de Bolsos</p>
         <p>Prueba para subir al remoto</p>
+        <h3>Cambios desde GitHub</h3>
     </header>
 
     <nav>
