añadido párrafo en section

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bolsomaniac - Tienda de Bolsos</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
+
 <body>
 
     <header>
@@ -13,6 +15,7 @@
         <p>Tienda de Bolsos</p>
         <p>Prueba para subir al remoto</p>
         <h3>Cambios desde GitHub</h3>
+
     </header>
 
     <nav>
@@ -25,6 +28,7 @@
         <h2>Bienvenido a Bolsomaniac</h2>
         <p>Descubre nuestra exclusiva colección de bolsos.</p>
         <!-- Agrega más contenido sobre la tienda aquí -->
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, debitis?</p>
     </section>
 
     <footer>
@@ -32,4 +36,5 @@
     </footer>
 
 </body>
+
 </html>
